# lora-lite

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-04-27-065913-cc_math_review.txt  developer_guide.md
docs/audit/: REVIEW_PROMPT_DESIGN.md  REVIEW_PROMPT_VARIANTS.md  REVIEW_PROMPT_VARIANTS_V2.md  REVIEW_PROMPT_VARIANTS_V3.md  REVIEW_PROMPT_VARIANTS_V4.md  SUMMARY.md  design_review.md  variants_review.md  variants_review_v2.md  variants_review_v3.md  variants_review_v4.md
docs/papers/: 2602.04998_Learning_Rate_Matters.md
docs/refs/: antipasto3_svd_adapter.py  orig_delora.py
docs/spec/: 20260426_code_review.md  20260426_lora_lite_plan.md
scripts/: metamath_gsm8k_benchmark.py  qwen_train_probe.py
src/lora_lite/: __init__.py  adapter.py  config.py  target.py  variant.py
src/lora_lite/variants/: __init__.py  antipasto.py  delora.py  dora.py  eva.py  hra.py  ia3.py  lora.py  pissa.py  road.py
tests/: smoke.py  test_bnb.py  test_lora_lite.py  test_metamath_gsm8k_benchmark.py  test_metamath_smoke.py
