[project]
name = "lora-lite"
version = "0.0.1"
description = "Hackable forward-hook LoRA. ~600 LoC. One file per variant."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "einops>=0.7",
    "jaxtyping>=0.2.25",
]

[project.optional-dependencies]
test = ["pytest", "tabulate"]
hf-test = ["accelerate>=1.6", "safetensors>=0.5", "transformers>=4.51"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
exclude-newer = "5 days"